@@ -1313,11 +1313,8 @@ PHPAPI size_t _php_stream_copy_to_stream_ex(php_stream *src, php_stream *dest, s
 
 	if (php_stream_stat(src, &ssbuf) == 0) {
 		if (ssbuf.sb.st_size == 0
-#ifdef S_ISFIFO
-		 && !S_ISFIFO(ssbuf.sb.st_mode)
-#endif
-#ifdef S_ISCHR
-		 && !S_ISCHR(ssbuf.sb.st_mode)
+#ifdef S_ISREG
+			&& S_ISREG(ssbuf.sb.st_mode)
 #endif
 		) {
 			*len = 0;
